# Note: This crate must be built using do.sh
[package]
name = "serum_assert_owner"
version = "0.4.7"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[dependencies]
solana-program = "1.4.3"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_assert_owner"

[dev-dependencies]
