[package]
name = "serum-crank"
version = "0.4.7"
edition = "2018"
description = "Serum DEX"
repository = "https://github.com/project-serum/serum-dex"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[[bin]]
name = "crank"
path = "src/bin/main.rs"

[dependencies]
serum = { version = "0.4.0", path = "../", default-features = false, features = [
    "client"
] }
serum-common = { version = "0.4.4", path = "../../common", features = [
    "client"
] }
spl-token = { version = "3.0.0-pre1", features = [
    "no-entrypoint"
], default-features = false }
clap = "3.0.0-beta.1"
enumflags2 = "0.6.4"
solana-client = "1.6.18"
solana-sdk = "1.6.18"
anyhow = "1.0.32"
rand = "0.7.3"
safe-transmute = "0.11.0"
threadpool = "1.8.1"
sloggers = "1.0"
slog-scope = "4.3"
slog-stdlog = "4"
log = "0.4"
debug_print = "1.0.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
