[package]
name = "serum-dex-permissioned"
version = "0.4.6"
edition = "2018"
description = "Serum DEX"
repository = "https://github.com/project-serum/serum-dex"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
serum = { path = "../", version = "0.4.0" }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
