[package]
name = "serum-pool-schema"
version = "0.4.7"
authors = ["Sebastian Conybeare <sebastian@projectserum.com>"]
edition = "2018"
description = "Serum pool schema"
repository = "https://github.com/project-serum/serum-dex"
license = "Apache-2.0"

[features]
program = []
default = []

[dependencies]
serum-borsh = "0.8.1-serum.1"
solana-program = "1.4.14"

[[bin]]
name = "print-schema"
path = "src/print-schema.rs"
