[package]
name = "serum-pool-admin-controlled"
version = "0.4.7"
description = "Simple serum pool"
edition = "2018"
repository = "https://github.com/project-serum/serum-dex"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[features]
no-entrypoint = []
program = []
default = []

[dependencies]
solana-program = "1.4.14"
serum-pool = { version = "0.4.3", path = "../.." }
spl-token = { version = "3.0.0", features = ["no-entrypoint"] }
serum-borsh = "0.8.1-serum.1"

[lib]
name = "serum_pool_examples_admin_controlled"
crate-type = ["cdylib", "lib"]
