[package]
name = "serum-pool-simple"
version = "0.4.5"
description = "Simple serum pool"
edition = "2018"

[features]
no-entrypoint = []
program = []
default = []

[dependencies]
solana-program = "1.4.14"
serum-pool = { version = "0.4.3", path = "../.." }

[lib]
name = "serum_pool_examples_simple"
crate-type = ["cdylib", "lib"]
