[package]
name = "serum-pool-simple"
version = "0.4.7"
description = "Simple serum pool"
edition = "2018"
repository = "https://github.com/project-serum/serum-dex"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[features]
no-entrypoint = []
program = []
default = []

[dependencies]
solana-program = "1.4.14"
serum-pool = { version = "0.4.3", path = "../.." }

[lib]
name = "serum_pool_examples_simple"
crate-type = ["cdylib", "lib"]
